--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@upstash/redis": "^1.34.5",
     "mongoose": "^8.12.1",
+    "mssql": "^11.0.1",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
