--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.34.5",
+    "cookie": "^1.0.2",
     "mongoose": "^8.12.1",
     "mssql": "^11.0.1",
     "next": "15.2.2",
